@@ -42,7 +42,7 @@ class Example
     end
 
     def action_path
-      @c.class2path(OneTimeToken, @c.path_info)
+      @c.class2path(ExamplePanel, OneTimeToken)
     end
 
     attr_reader :errors
