@@ -12,7 +12,7 @@ class Example
     end
 
     def action_path
-      @c.class2path(Password, @c.path_info)
+      @c.class2path(ExamplePanel, Password)
     end
 
     def ok
