@@ -4,7 +4,7 @@
 </head>
 <body>
 
-<%= import Example::Header %>
+<%= import :header %>
 <h1><%= value :title %> example</h1>
 <%= import :example %>
 
