@@ -4,7 +4,7 @@
 </head>
 <body>
 
-<%= import Example::Header %>
+<%= import :header %>
 <h1>view of <%= value :title %> example</h1>
 <p>view filename is `<code><%= value :filename %></code>'.</p>
 <hr />
