@@ -1,3 +1,7 @@
+2009-01-08  TOKI Yoshinori  <toki@freedom.ne.jp>
+
+	* lib/gluon/po.rb, lib/gluon/rs.rb: URL map not found exception.
+
 2009-01-06  TOKI Yoshinori  <toki@freedom.ne.jp>
 
 	* lib/gluon/controller.rb, lib/gluon/po.rb, lib/gluon/rs.rb,
